tests/samples/negative/types/strraw_return_local.ax
module strraw_return_local;

unsafe fn bad() -> str {
    let bytes: [2]u8 = b"ok";
    return strraw(sliceptr(bytes[:]), slicelen(bytes[:]));
}

fn main() -> i32 {
    return 0;
}
